<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapter"
            type="me.aprilian.coinbasesample.scene.LatestCoinAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/in_the_past_24_hours"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvMarketCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_is_up"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvMarketValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="0.72%"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvMarketCondition"
                app:layout_constraintStart_toEndOf="@+id/tvMarketCondition" />


            <TextView
                android:id="@+id/tvWatchlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tab_all_assets"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvMarketCondition"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatestCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:setAdapter="@{adapter}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvWatchlist"
                tools:itemCount="3"
                tools:listitem="@layout/item_latest_coin"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>